Fixed spacing for paragraphs and h1-h6 in index.css. Added the new appointment jsx

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -36,3 +36,9 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+/* Remove default padding and margin for texts */
+p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
+}
